--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="log_info">PingIT Info</string>
     <string name="log_warning">PingIT Warn</string>
     <string name="log_error">PingIT Err</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="loginWelcomeMessage">Welcome to PingIT. Please sign in.</string>
+    <string name="loginLoginBtn">Login</string>
+    <string name="faqSectionTitle">FAQ</string>
+    <string name="chatSectionTitle">Chat</string>
+    <string name="notificationSectionTitle">Pings</string>
 </resources>
