--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="faqSectionTitle">FAQ</string>
     <string name="chatSectionTitle">Chat</string>
     <string name="notificationSectionTitle">Pings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
