--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,16 @@
     <string name="title_activity_home">HomeActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="loginWelcomeMessage">Welcome to PingIT. Please sign in.</string>
-    <string name="loginLoginBtn">Login</string>
+    <string name="loginBtn">Login</string>
     <string name="faqSectionTitle">FAQ</string>
     <string name="chatSectionTitle">Chat</string>
     <string name="notificationSectionTitle">Pings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="registerNamePlaceholder">Name</string>
+    <string name="registerEmailPlaceholder">Email</string>
+    <string name="registerPasswordPlaceholder">Password</string>
+    <string name="registerPasswordPlaceholderConfirm">Confirm Password</string>
+    <string name="registerBtn">Register</string>
+
 </resources>
