Tweaked some colors on the register fragment and added some constants to the strings file and colors XML files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="registerPasswordPlaceholder">Password</string>
     <string name="registerPasswordPlaceholderConfirm">Confirm Password</string>
     <string name="registerBtn">Register</string>
-
+    <string name="registerSwitchToLoginBtn">Already have an account?</string>
+    <string name="loginSwitchToRegisterBtn">Create an account</string>
 </resources>
