--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="chatSectionTitle">Chat</string>
     <string name="notificationSectionTitle">Pings</string>
 
+    <string name="startupTitleLogin">Login to PingIT</string>
+    <string name="startupTitleRegister">Register with PingIT</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="registerNamePlaceholder">Name</string>
     <string name="registerEmailPlaceholder">Email</string>
