--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="log_info">PingIT Info</string>
     <string name="log_warning">PingIT Warn</string>
     <string name="log_error">PingIT Err</string>
-    <string name="titleActivityHome">HomeActivity</string>
+    <string name="titleActivityHome">PingIT</string>
     <string name="loginWelcomeMessage">Welcome to PingIT. Please sign in.</string>
     <string name="loginBtn">Login</string>
     <string name="faqSectionTitle">FAQ</string>
@@ -22,6 +22,7 @@
     <string name="registerBtn">Register</string>
     <string name="registerSwitchToLoginBtn">Already have an account?</string>
     <string name="loginSwitchToRegisterBtn">Create an account</string>
-    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="titleActivitySettings">Settings</string>
+
 
 </resources>
