Put a bunch of strings in the strings.xml file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,12 @@
     <string name="registerSuccessMsg">Registration Successful!"</string>
     <string name="loginSwitchToRegisterBtn">Create an account</string>
     <string name="titleActivitySettings">Settings</string>
+    <string name="passwordsDontMatch">Passwords do not match</string>
+    <string name="emailAlreadyInUse">" is already in use. Please enter a different email."</string>
+    <string name="emailNotValid">" is not a valid email. Please enter a valid email."</string>
+    <string name="invalidCredentials">Username or password are incorrect. Please try again.</string>
+    <string name="dialogConfirm">Okay</string>
+    <string name="loginSuccessMsg">Login Successful!</string>
 
 
 </resources>
