--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="logoutBtn">Logout</string>
     <string name="faqSectionTitle">FAQ</string>
     <string name="chatSectionTitle">Chat</string>
-    <string name="notificationSectionTitle">Pings</string>
+    <string name="pingsSectionTitle">Pings</string>
 
     <string name="noNetworkConnectionMsg">Unable to connect to PingIT server. Please check network settings.</string>
 
@@ -43,6 +43,7 @@
     <string name="confirmLogoutMsg">Are you sure you would like to log out?</string>
     <string name="passwordTooShort">Please enter a password of at least 6 characters.</string>
     <string name="passwordNotValid">Please enter a valid password.</string>
+    <string name="confirmPasswordInvalid">Please confirm your password.</string>
 
 
 </resources>
