--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loadingPings">Requesting pings...</string>
+    <string name="pingConnectionError">Could not connect to the Ping.IT server.\nPlease try again.</string>
+    <string name="retryConnection">Retry</string>
 
 
 </resources>
