--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,8 @@
     <string name="signingOutDialogMsg">Signing out…</string>
     <string name="dialogCancel">Cancel</string>
     <string name="confirmLogoutMsg">Are you sure you would like to log out?</string>
-    <string name="passwordTooShort">Please enter a password of at least 6 characters.</string>
+    <string name="passwordTooShort">Please enter a password of at least 8 characters.</string>
+    <string name="passwordMissingCharacters">Password must contain letters and numbers.</string>
     <string name="passwordNotValid">Please enter a valid password.</string>
     <string name="prefs_notification_sound_key">notification_sound_preference</string>
     <string name="prefs_notification_sound_title">Notification Sound</string>
