Added a textview so that if there are no pings the user will see it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="loadingPings">Requesting pings...</string>
     <string name="pingConnectionError">Could not connect to the Ping.IT server.\nPlease try again.</string>
     <string name="retryConnection">Retry</string>
+    <string name="noPings">You currently have no pings!</string>
 
 
 </resources>
