Revised a bunch more tests so that login and logout is handled correctly between tests to ensure the tests are able to access the parse user data needed to pass

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
     <string name="str_login_title">Logging In...</string>
     <string name="str_login_msg">Logging in with saved credentials.</string>
     <string name="str_blank_name_msg">Name cannot be blank.</string>
-    <string name="userNotLoggedIn">User is not logged in! Can\'t save prefs.</string>
+    <string name="userNotLoggedIn">Parse user error!!! Is there no user currently logged in?</string>
 
 
 </resources>
