loading dialog for chat. close chat button. num chat connected on main screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,8 @@
     <string name="ClickToRefresh">Click to Refresh</string>
     <string name="NoOnlineAdmins">No online admins.</string>
     <string name="fmtClickToChatWith">Click to chat with %s</string>
+    <string name="fmtNumOnlineAdmins">There are %s online admins.</string>
+    <string name="OneOnlineAdmin">There is 1 online admin.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -78,6 +80,7 @@
     <string name="str_login_title">Logging In...</string>
     <string name="str_login_msg">Logging in with saved credentials.</string>
     <string name="str_blank_name_msg">Name cannot be blank.</string>
+    <string name="CloseChat">Close Chat</string>
 
 
 </resources>
