Added test 49 and also reconfigured the pings page so that it will auto reload after coming back from the settings page or when the Homeactivity is resumed after switching between apps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="CloseChat">Close Chat</string>
     <string name="PingsCleared">Pings Cleared</string>
     <string name="UnableToClearPings">Unable to clear pings.</string>
+    <string name="prefs_ringtone_failed">Failed to set ringtone.</string>
 
 
 </resources>
