--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,23 @@
 <resources>
-    <string name="app_name">PingIT</string>
+    <string name="app_name">Ping.IT</string>
     <string name="action_settings">Settings</string>
-    <string name="log_verbose">PingIT Verb</string>
-    <string name="log_debug">PingIT Debug</string>
-    <string name="log_info">PingIT Info</string>
-    <string name="log_warning">PingIT Warn</string>
-    <string name="log_error">PingIT Err</string>
-    <string name="titleActivityHome">PingIT</string>
-    <string name="loginWelcomeMessage">Welcome to PingIT. Please sign in.</string>
+    <string name="log_verbose">Ping.IT Verb</string>
+    <string name="log_debug">Ping.IT Debug</string>
+    <string name="log_info">Ping.IT Info</string>
+    <string name="log_warning">Ping.IT Warn</string>
+    <string name="log_error">Ping.IT Err</string>
+    <string name="titleActivityHome">Ping.IT</string>
+    <string name="loginWelcomeMessage">Welcome to Ping.IT. Please sign in.</string>
     <string name="loginBtn">Login</string>
     <string name="logoutBtn">Logout</string>
     <string name="faqSectionTitle">FAQ</string>
     <string name="chatSectionTitle">Chat</string>
     <string name="pingsSectionTitle">Pings</string>
 
-    <string name="noNetworkConnectionMsg">Unable to connect to PingIT server. Please check network settings.</string>
+    <string name="noNetworkConnectionMsg">Unable to connect to Ping.IT server. Please check network settings.</string>
 
-    <string name="startupTitleLogin">Login to PingIT</string>
-    <string name="startupTitleRegister">Register with PingIT</string>
+    <string name="startupTitleLogin">Login to Ping.IT</string>
+    <string name="startupTitleRegister">Register with Ping.IT</string>
     <string name="registerNamePlaceholder">Name</string>
     <string name="registerEmailPlaceholder">Email</string>
     <string name="registerPasswordPlaceholder">Password</string>
@@ -37,7 +37,7 @@
     <string name="dialogYes">Yes</string>
     <string name="dialogNo">No</string>
     <string name="loginSuccessMsg">Login Successful!</string>
-    <string name="signingInDialogMsg">Signing into PingIT…</string>
+    <string name="signingInDialogMsg">Signing into Ping.IT…</string>
     <string name="signingOutDialogMsg">Signing out…</string>
     <string name="dialogCancel">Cancel</string>
     <string name="confirmLogoutMsg">Are you sure you would like to log out?</string>
